force-app/main/default/objects/Opportunity/fields/Address_City__c.field-meta.xml
<CustomField>
    <fullName>Address_City__c</fullName>
    <label>Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>