force-app/main/default/objects/Opportunity/fields/Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Address_Country__c</fullName>
    <label>Address Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>