force-app/main/default/objects/Opportunity/fields/address_street__c.field-meta.xml
<CustomField>
    <fullName>address_street__c</fullName>
    <label>Address Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>