force-app/main/default/objects/Opportunity/fields/Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>Admission_Date__c</fullName>
    <inlineHelpText>Specify the actual admission date when client arrived at our facility. This field is required to change stage to &quot;Admitted&quot;</inlineHelpText>
    <label>Admission Date</label>
    <type>Date</type>
</CustomField>