force-app/main/default/objects/Opportunity/fields/Admit_Date__c.field-meta.xml
<CustomField>
    <fullName>Admit_Date__c</fullName>
    <label>Admit Date</label>
    <type>Date</type>
</CustomField>