force-app/main/default/objects/Opportunity/fields/Bed__c.field-meta.xml
<CustomField>
    <fullName>Bed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bed ID</label>
    <referenceTo>Bed__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>