force-app/main/default/objects/Opportunity/fields/Bed_Number__c.field-meta.xml
<CustomField>
    <fullName>Bed_Number__c</fullName>
    <formula>Bed__r.Bed_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bed</label>
    <type>Text</type>
</CustomField>