force-app/main/default/objects/Opportunity/fields/Caller_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_Name__c</fullName>
    <inlineHelpText>If you spoke with someone other than the patient, specify their name here</inlineHelpText>
    <label>Caller Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>