force-app/main/default/objects/Opportunity/fields/Check_Financial_Assistance_hidden__c.field-meta.xml
<CustomField>
    <fullName>Check_Financial_Assistance_hidden__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Check Financial Assistance(hidden)</label>
    <type>Checkbox</type>
</CustomField>