force-app/main/default/objects/Opportunity/fields/Date_Closed_with_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed_with_Benefits__c</fullName>
    <label>Date Closed with Benefits(Hidden)</label>
    <type>Date</type>
</CustomField>