force-app/main/default/objects/Opportunity/fields/Date_of_Update_FA_hidden__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Update_FA_hidden__c</fullName>
    <label>Date of Update FA(hidden)</label>
    <type>Date</type>
</CustomField>