force-app/main/default/objects/Opportunity/fields/Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Date__c</fullName>
    <label>Discharge Date</label>
    <type>DateTime</type>
</CustomField>