force-app/main/default/objects/Opportunity/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <inlineHelpText>Client&apos;s Date of Birth</inlineHelpText>
    <label>DOB</label>
    <type>Date</type>
</CustomField>