force-app/main/default/objects/Opportunity/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>If patient has an email address, specify it here - DO NOT PUT PARENT&apos;S EMAIL HERE</inlineHelpText>
    <label>Patient&apos;s Email</label>
    <type>Email</type>
</CustomField>