force-app/main/default/objects/Opportunity/fields/hiddenCheck__c.field-meta.xml
<CustomField>
    <fullName>hiddenCheck__c</fullName>
    <defaultValue>true</defaultValue>
    <label>hiddenCheck</label>
    <type>Checkbox</type>
</CustomField>