force-app/main/default/objects/Opportunity/fields/House__c.field-meta.xml
<CustomField>
    <fullName>House__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>House ID</label>
    <referenceTo>House__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>