force-app/main/default/objects/Opportunity/fields/Initial_Agreement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Agreement_Amount__c</fullName>
    <label>Initial Agreement Amount</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>