force-app/main/default/objects/Opportunity/fields/Instalments_by_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Instalments_by_Frequency__c</fullName>
    <label>Instalments by Frequency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>