force-app/main/default/objects/Opportunity/fields/Insurance_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Phone_Number__c</fullName>
    <label>Primary Insurance Phone Number</label>
    <type>Phone</type>
</CustomField>