force-app/main/default/objects/Opportunity/fields/Insurance_Providor__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Providor__c</fullName>
    <label>Insurance Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BCBS</fullName>
            </value>
            <value>
                <fullName>Aetna</fullName>
            </value>
            <value>
                <fullName>United Healthcare</fullName>
            </value>
            <value>
                <fullName>Cigna</fullName>
            </value>
            <value>
                <fullName>Avmed</fullName>
            </value>
            <value>
                <fullName>Amerihealth</fullName>
            </value>
            <value>
                <fullName>Harvard Pilgrim</fullName>
            </value>
            <value>
                <fullName>GEHA</fullName>
            </value>
            <value>
                <fullName>Humana</fullName>
            </value>
            <value>
                <fullName>Anthem</fullName>
            </value>
            <value>
                <fullName>Medical Mutual</fullName>
            </value>
            <value>
                <fullName>Value Options</fullName>
            </value>
            <value>
                <fullName>Coventry</fullName>
            </value>
            <value>
                <fullName>MultiPlan</fullName>
            </value>
            <value>
                <fullName>Health Net</fullName>
            </value>
            <value>
                <fullName>GHI</fullName>
            </value>
            <value>
                <fullName>Optum</fullName>
            </value>
            <value>
                <fullName>UMR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>