force-app/main/default/objects/Opportunity/fields/Lead_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Description__c</fullName>
    <description>Capture Lead Description from Lead.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>