force-app/main/default/objects/Opportunity/fields/Level_Of_Care__c.field-meta.xml
<CustomField>
    <fullName>Level_Of_Care__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level Of Care ID</label>
    <referenceTo>Programs__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>