force-app/main/default/objects/Opportunity/fields/Location_text_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_text_Id__c</fullName>
    <label>Location text Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>