force-app/main/default/objects/Opportunity/fields/Patient_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Patient_Check_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Check In</label>
    <type>Checkbox</type>
</CustomField>