force-app/main/default/objects/Opportunity/fields/Patient_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Middle_Name__c</fullName>
    <label>Patient Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>