force-app/main/default/objects/Opportunity/fields/Patient_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Patient_Responsibility__c</fullName>
    <label>Patient Responsibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>