force-app/main/default/objects/Opportunity/fields/Patient_s_DOB__c.field-meta.xml
<CustomField>
    <fullName>Patient_s_DOB__c</fullName>
    <label>Patient&apos;s DOB</label>
    <type>Date</type>
</CustomField>