force-app/main/default/objects/Opportunity/fields/Payment_Amount_curr__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount_curr__c</fullName>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>