force-app/main/default/objects/Opportunity/fields/Primary_Insurance_Provider1__c.field-meta.xml
<CustomField>
    <fullName>Primary_Insurance_Provider1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Insurance Provider</label>
    <referenceTo>Payor__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>