force-app/main/default/objects/Opportunity/fields/Profile_Picture__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture__c</fullName>
    <label>Profile Picture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>