force-app/main/default/objects/Opportunity/fields/Readmit__c.field-meta.xml
<CustomField>
    <fullName>Readmit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-Admit</label>
    <type>Checkbox</type>
</CustomField>