force-app/main/default/objects/Opportunity/fields/Reason_for_Closed_Refer_Out__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Closed_Refer_Out__c</fullName>
    <label>Reason for Closed Refer Out</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Can’t meet patient responsibility – needs in network</fullName>
            </value>
            <value>
                <fullName>Clinically denied – needs adolescent provider</fullName>
            </value>
            <value>
                <fullName>Clinically denied – needs eating disorder primary provider</fullName>
            </value>
            <value>
                <fullName>Clinically denied –needs psychiatric primary provider</fullName>
            </value>
            <value>
                <fullName>Financial - No out of network benefits – needs in network</fullName>
            </value>
            <value>
                <fullName>Medically denied – needs a higher level of care</fullName>
            </value>
            <value>
                <fullName>No SUD as primary diagnosis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>