force-app/main/default/objects/Opportunity/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <inlineHelpText>Select &quot;Inbound&quot; if client was referred to us from another facility. Select &quot;Outbound&quot; if we are referring client out</inlineHelpText>
    <label>Referral Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>