force-app/main/default/objects/Opportunity/fields/Referred_Out_Organization__c.field-meta.xml
<CustomField>
    <fullName>Referred_Out_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred Out Organization</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>notEqual</operation>
            <value>Patient Account</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Referred Out Organization)</relationshipLabel>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>