force-app/main/default/objects/Opportunity/fields/Requires_Financial_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Requires_Financial_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Financial Assistance</label>
    <type>Checkbox</type>
</CustomField>