force-app/main/default/objects/Opportunity/fields/Rooms__c.field-meta.xml
<CustomField>
    <fullName>Rooms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room ID</label>
    <referenceTo>Rooms__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>