force-app/main/default/objects/Opportunity/fields/Secondary_Insurance_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Insurance_Group_Number__c</fullName>
    <label>Secondary Insurance Group Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>