force-app/main/default/objects/Opportunity/fields/Secondary_Subscriber_DOB__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Subscriber_DOB__c</fullName>
    <label>Secondary Subscriber DOB</label>
    <type>Date</type>
</CustomField>