force-app/main/default/objects/Opportunity/fields/Secondary_Subscriber_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Subscriber_Last_Name__c</fullName>
    <label>Secondary Subscriber Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>