force-app/main/default/objects/Opportunity/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <label>SSN</label>
    <length>60</length>
    <type>Text</type>
</CustomField>