force-app/main/default/objects/Opportunity/fields/Stage_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Modified_Date__c</fullName>
    <description>This Filed captures the date/time when Opportunity stage changes.</description>
    <label>Stage Modified Date</label>
    <type>DateTime</type>
</CustomField>