force-app/main/default/objects/Opportunity/fields/Subscriber_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Middle_Name__c</fullName>
    <label>Subscriber Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>