force-app/main/default/objects/Opportunity/fields/Treatment_Center__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treatment Center ID</label>
    <referenceTo>Treatment_Center__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>