force-app/main/default/objects/Opportunity/validationRules/Discharge_date_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Discharge_date_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(AND( ISCHANGED( StageName ),ISPICKVAL(StageName,&quot;Discharged&quot;) ),ISBLANK( Discharge_Date__c ) )</errorConditionFormula>
    <errorMessage>Please enter the Discharge date first if you want to mark the stage as discharged.</errorMessage>
</ValidationRule>